<resources>
<!--MohammadAli Fouladi N01547173-->
    <string name="app_name">MohammadAliLab9</string>
    <string name="By">By:MohammadAliN01547173</string>
    <string name="home">Home</string>
    <string name="Fullname">MohammadAliFouladi</string>
    <string name="Humber">N01547173@humber.ca</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">OPTIONS</string>
    <string name="toggle_mode">MOE</string>
    <string name="search">FOU</string>
    <string name="hello">Hello</string>
    <string name="Search">Search</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="shared_preferences">shared preferences</string>
    <string name="saved">"Saved Array List to Shared preferences. "</string>
    <string name="enter_course_name">Enter course Name</string>
    <string name="courses">courses</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="no_data_to_delete">No data to delete.</string>
    <string name="foul2i">Foul2i</string>
    <string name="file_name">File Name</string>
    <string name="cache_file">Cache File</string>
    <string name="persistent_file">Persistent File</string>
    <string name="create_file">Create File</string>
    <string name="delete_file">Delete File</string>
    <string name="file_contents">File Contents</string>
    <string name="write_file">Write File</string>
    <string name="read_file">Read File</string>
    <string name="file">file name</string>
    <string name="files">files</string>
    <string name="moe">Moe</string>
    <string name="file_name_missing">File name missing</string>
    <string name="dismiss">Dismiss</string>
    <string name="content_missing">Content Missing</string>
</resources><!-- MohammadAli Fouladi N01547173-->
